fix sort number

--- a/index.html
+++ b/index.html
@@ -65,6 +65,34 @@
                     </div>
                 </div>
             </div>
+            <div class="w-50 mt-5">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <h4>In ra số lượng số lẻ và số chẵn</h4>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label>Số thứ nhất</label>
+                                <input id="ipNumber1" type="number" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>Số thứ hai</label>
+                                <input id="ipNumber2" type="number" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>Số thứ ba</label>
+                                <input id="ipNumber3" type="number" class="form-control">
+                            </div>
+                            <button type="button" class="btn btn-success" id="btnCount">Show result</button>
+                        </form>
+                    </div>
+                    <div class="card-footer">
+                        <p id="txtOdd"></p>
+                        <p id="txtEven"></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
