add triangle check

--- a/index.html
+++ b/index.html
@@ -93,6 +93,33 @@
                     </div>
                 </div>
             </div>
+            <div class="w-50 mt-5">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <h4>Kiểm tra loại tam giác</h4>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label>Cạnh thứ nhất</label>
+                                <input id="ipEdge1" type="number" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>Cạnh thứ hai</label>
+                                <input id="ipEdge2" type="number" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label>Cạnh thứ ba</label>
+                                <input id="ipEdge3" type="number" class="form-control">
+                            </div>
+                            <button type="button" class="btn btn-success" id="btnCheckTriangle">Kiểm tra</button>
+                        </form>
+                    </div>
+                    <div class="card-footer">
+                        <p id="txtTriangleType"></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
